RESOLVED FIXED160762
Web Inspector: Should be able to Edit Node Attributes and Styles for non-UserAgent Shadow DOM nodes
https://bugs.webkit.org/show_bug.cgi?id=160762
Summary Web Inspector: Should be able to Edit Node Attributes and Styles for non-User...
Joseph Pecoraro
Reported 2016-08-10 19:03:14 PDT
Summary: Should be able to Edit Node Attributes and Styles for non-UserAgent Shadow DOM nodes. Steps to Reproduce: 1. Inspect a page with Shadow DOM content (open or closed) 2. Select a Shadow DOM node => Should be able to Edit Attributes in DOM Tree => Should be able to Edit Styles applying to the selected node
Attachments
[PATCH] Proposed Fix (14.22 KB, patch)
2016-08-10 19:10 PDT, Joseph Pecoraro
no flags
Radar WebKit Bug Importer
Comment 1 2016-08-10 19:03:39 PDT
Joseph Pecoraro
Comment 2 2016-08-10 19:10:52 PDT
Created attachment 285805 [details] [PATCH] Proposed Fix
WebKit Commit Bot
Comment 3 2016-08-10 20:36:30 PDT
Comment on attachment 285805 [details] [PATCH] Proposed Fix Clearing flags on attachment: 285805 Committed r204370: <http://trac.webkit.org/changeset/204370>
WebKit Commit Bot
Comment 4 2016-08-10 20:36:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.